--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -6,6 +6,16 @@ ja:
         restrict_dependent_destroy:
           has_one: "%{record}が存在しているので削除できません"
           has_many: "%{record}が存在しているので削除できません"
+  activemodel:
+    attributes:
+      purchase_address:
+        post_code: 郵便番号
+        prefecture_id: 都道府県
+        city: 市区町村
+        block: 番地
+        building: 建物名
+        phone_number: 電話番号
+
   date:
     abbr_day_names:
       - 日
