--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -15,7 +15,7 @@ ja:
         block: 番地
         building: 建物名
         phone_number: 電話番号
-
+        token: クレジットカード情報
   date:
     abbr_day_names:
       - 日
