Formオブジェクトのモデル単体テスト

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,6 +9,8 @@ ja:
   activemodel:
     attributes:
       purchase_address:
+        item_id: 商品ID
+        user_id: ユーザーID
         post_code: 郵便番号
         prefecture_id: 都道府県
         city: 市区町村
